--- a/package.json
+++ b/package.json
@@ -8,7 +8,17 @@
     "server": "nodemon index.js",
     "migrate": "knex migrate:latest",
     "rollback": "knex migrate:rollback",
-    "seed": "knex seed:run"
+    "seed": "knex seed:run",
+    "migrateh": "heroku run knex migrate:latest -a build-week-unit-4",
+    "rollbackh": "heroku run knex migrate:rollback -a build-week-unit-4",
+    "databaseh": "heroku pg:psql -a build-week-unit-4",
+    "seedh": "heroku run knex seed:run -a build-week-unit-4",
+    "test": "cross-env NODE_ENV=testing jest --verbose --runInBand",
+    "deploy": "git push heroku main"
+  },
+  "engines": {
+    "node": "14.16.0",
+    "npm": "6.14.11"
   },
   "repository": {
     "type": "git",
@@ -22,8 +32,12 @@
   },
   "homepage": "https://github.com/Build-Week-AfricanMarket4/back-end#readme",
   "devDependencies": {
+    "@types/jest": "^27.0.3",
+    "cross-env": "^7.0.3",
     "eslint": "^8.5.0",
-    "nodemon": "^2.0.15"
+    "jest": "^27.4.5",
+    "nodemon": "^2.0.15",
+    "supertest": "^6.1.6"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -31,11 +45,9 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "helmet": "^4.6.0",
-    "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.95.14",
     "knex-cleaner": "^1.3.1",
-    "pg": "^8.7.1",
-    "postgres": "^1.0.2"
+    "pg": "^8.7.1"
   }
 }
